<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="high_priority">High priority</string>
    <string name="high">High</string>
    <string name="low_priority">Low priority</string>
    <string name="low">Low</string>
    <string name="default_">Default</string>
    <string name="info">Info</string>
    <string name="my_todos">My todos</string>
    <string name="completed">Completed — %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="add_todo">Add todo</string>
    <string name="go_back_without_saving">Go back without saving</string>
    <string name="save">Save</string>
    <string name="what_to_do">What to do…</string>
    <string name="priority">Priority</string>
    <string name="complete_before">Complete before</string>
    <string name="delete">Delete</string>
    <string name="mark_completed">Mark completed</string>
    <string name="show_completed">Show completed</string>
    <string name="hide_completed">Hide completed</string>
    <string name="cancel">Cancel</string>
    <string name="new_">New</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="invalid_deadline_date">Deadline date cannot be before today</string>
    <string name="offline_copy">You\'re viewing offline copy of your todo items</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="default_priority">Default priority</string>
    <string name="undo">Undo</string>

</resources>
