...
        shadowElevation = 2.dp,
        shape = shape,
    ) {
        TextField(
            textStyle = AppTheme.typography.body,
            modifier = modifier
                .fillMaxWidth().testTag("description text field"),
            value = state.description,
            onValueChange = {
                onEvent(EditViewModel.Event.OnDescriptionChanged(it))
            },
            placeholder = {
                Text(text = stringResource(R.string.what_to_do))
...
